--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,16 @@
   </head>
   <body>
     <div class="wrapper">
+      <header class="header-mobile">
+        <h1 class="logo"><strong>Carrito</strong></h1>
+        <button class="open-menu" id="open-menu">
+          <i class="bi bi-three-dots"></i>
+        </button>
+      </header>
       <aside>
+        <button class="close-menu" id="close-menu">
+          <i class="bi bi-x"></i>
+        </button>
         <header>
           <h1 class="logo">Carrito</h1>
         </header>
@@ -66,6 +75,7 @@
         </div>
       </main>
     </div>
+    <script src="./js/menu.js"></script>
     <script src="./js/carrito.js"></script>
   </body>
 </html>
