--- a/carrito.html
+++ b/carrito.html
@@ -75,6 +75,7 @@
         </div>
       </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/carrito.js"></script>
   </body>
